fix for bug 106855: Down arrow key at last empty line of textarea moves caret to end of line above.  checked in on behalf of skamio@netscape.net.  r=jfrancis; sr=kin